--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    <title>Balram</title>
+    <title>Askup</title>
+    <script type='text/javascript'>
+      window.top.location = 'http://askup.in';
+    </script>
   </head>
   <body>
-    hello world
+    Wait... We are redirecting you to Askup.
   </body>
 </html>
