--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
   <head>
-    <title>Askup</title>
-    <script type='text/javascript'>
-      window.top.location = 'http://askup.in';
-    </script>
+    <title>Testing</title>
   </head>
   <body>
     Wait... We are redirecting you to Askup.
