--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <hr><p>My Project List:</p>
 
 <ul>
-<li><a href="http://www.askup.in">www.askup.in</a></li>
+<li><a href="http://www.klipstory.com">www.klipstory.com</a></li>
 <li><a href="http://www.iamyoutube.com">www.iamyoutube.com</a></li>
 <li><a href="http://www.srmswe.com">www.srmswe.com</a></li>
 <li><a href="http://www.srmtelecom.com">www.srmtelecom.com</a></li>
